<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"	
    android:id="@+id/rl"											
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgColor"
    >    
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#d3d9dd"
    	android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true">
   <Spinner 
    android:id="@+id/Spinner01" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
		>
  </Spinner>  
  </LinearLayout>
	<TabHost 
	android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
	android:layout_centerHorizontal="true"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"/>
    	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/main_tab"
    		android:background="@drawable/maintab_toolbar_bg"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">

    		<RadioButton
    		    android:id="@+id/radio_button0"
    		    style="@style/main_tab_bottom"
    		    android:layout_height="wrap_content"
    		    android:layout_marginTop="2.0dip"
    		    android:drawableTop="@drawable/icon_1_n"
    		    android:text="@string/main_search" />

    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_map"
    			android:drawableTop="@drawable/icon_2_n"
    			android:id="@+id/radio_button1"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_camera"
    			android:drawableTop="@drawable/icon_3_n"
    			android:id="@+id/radio_button2"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_info"
    			android:drawableTop="@drawable/icon_4_n"
    			android:id="@+id/radio_button3"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_more"
    			android:drawableTop="@drawable/icon_5_n"
    			android:id="@+id/radio_button4"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    </LinearLayout>
</TabHost>
</RelativeLayout>